--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - run: echo "A"
   b:
-    name: a
+    name: b
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
