--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -12,9 +12,7 @@ jobs:
     name: b
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs:
-      - a
-    if: ${{ success() || failure() }}
+    # if: ${{ success() || failure() }}
     steps:
       - run: echo "B"
       - id: set
@@ -28,7 +26,7 @@ jobs:
     timeout-minutes: 10
     needs:
       - b
-    if: ${{ success() || failure() }} && needs.b.outputs.run_job_c == 'yes'
+    if: needs.b.outputs.run_job_c == 'yes'
     steps:
       - run: echo "C"
   d:
@@ -38,6 +36,6 @@ jobs:
     needs:
       - b
       - c
-    if: ${{ success() || failure() }} && needs.c.result == 'success'
+    if: needs.c.result == 'success'
     steps:
       - run: echo "D"
