--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -12,7 +12,9 @@ jobs:
     name: b
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    # if: ${{ success() || failure() }}
+    needs:
+      - a
+    if: always()
     steps:
       - run: echo "B"
       - id: set
@@ -26,7 +28,7 @@ jobs:
     timeout-minutes: 10
     needs:
       - b
-    if: needs.b.outputs.run_job_c == 'yes'
+    if: always() && needs.b.outputs.run_job_c == 'yes'
     steps:
       - run: echo "C"
   d:
@@ -36,6 +38,6 @@ jobs:
     needs:
       - b
       - c
-    if: needs.c.result == 'success'
+    if: always() && needs.c.result == 'success'
     steps:
       - run: echo "D"
