--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - run: echo "A"
   b:
-    name: error-job
+    name: success-job
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
@@ -21,13 +21,13 @@ jobs:
         id: mkdir
         run: |
           mkdir hoge
-          mkdir hoge
+          # mkdir hoge
   c:
     name: test-job
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
-      - a
-    if: always() && needs.a.result == 'success'
+      - b
+    if: always() && needs.b.result == 'success'
     steps:
       - run: echo "C"
