--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -9,19 +9,19 @@ jobs:
     steps:
       - run: echo "A"
   b:
-    name: skipped-job
+    name: error-job
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
       - a
-    if: "false"
+    if: always()
     steps:
       - run: echo "B"
       - name: mkdir
         id: mkdir
         run: |
           mkdir hoge
-          # mkdir hoge
+          mkdir hoge
   c:
     name: test-job
     runs-on: ubuntu-latest
