--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -9,20 +9,6 @@ jobs:
     steps:
       - run: echo "A"
   b:
-    name: skipped-job
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs:
-      - a
-    if: "false"
-    steps:
-      - run: echo "B"
-      - name: mkdir
-        id: mkdir
-        run: |
-          mkdir hoge
-          # mkdir hoge
-  c:
     name: test-job
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -30,4 +16,26 @@ jobs:
       - b
     if: ${{ success() || failure() }} && needs.b.result == 'success'
     steps:
-      - run: echo "C"
+      - run: echo "B"
+    # name: skipped-job
+    # runs-on: ubuntu-latest
+    # timeout-minutes: 10
+    # needs:
+    #   - a
+    # if: "false"
+    # steps:
+    #   - run: echo "B"
+    #   - name: mkdir
+    #     id: mkdir
+    #     run: |
+    #       mkdir hoge
+    #       # mkdir hoge
+  # c:
+  #   name: test-job
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 10
+  #   needs:
+  #     - b
+  #   if: ${{ success() || failure() }} && needs.b.result == 'success'
+  #   steps:
+  #     - run: echo "C"
