--- a/.github/workflows/workflow-test.yaml
+++ b/.github/workflows/workflow-test.yaml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 10
     needs:
       - a
-    if: ${{ success() || failure() }} && needs.b.result == 'success'
+    if: always() && needs.b.result == 'success'
     steps:
       - run: echo "B"
     # name: skipped-job
